--- a/package.json
+++ b/package.json
@@ -55,5 +55,9 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "owl.carousel": "^2.3.4"
   }
 }
