--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.2",
     "html-bundler-webpack-plugin": "^3.4.4",
