--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "webpack --mode=production --progress",
     "docs": "npm run build && cp -R ./dist/* ./docs",
     "preview": "npm run build && http-server dist --port 4321 -o",
-    "test": "echo 'No test specified' && exit 1"
+    "test": "e`cho 'No test specified' && exit 1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
